<resources>
    <string name="app_name">HarryPotterCharacters</string>
    <string name="app_title">Harry Potter Movie Characters</string>
    <string name="search_placeholder_text">Type to search</string>
    <string name="search_text">Search Icon Image</string>
    <string name="house_color_text">Character\'s house represented by defined colors</string>
    <string name="menu_icon">App Menu List</string>
    <string name="unknown_error_text">Unknown error</string>
    <string name="name_default_string">Harry Potter</string>
    <string name="actor_name_default_text">Daniel Radcliffe</string>
    <string name="name_placeholder">"Name: "</string>
    <string name="actor_s_name_placeholder">"Actor's Name: "</string>
    <string name="specie_placeholder">"Specie: "</string>
    <string name="unknown_text">Unknown</string>
    <string name="no_data_found">No data available</string>
    <string name="specie_default_text">Specie</string>
    <string name="character_image">A movie character image</string>
    <string name="character_detail_page">Character Details Page</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="is_alive_placeholder">Is Character Alive?: </string>
    <string name="search_field_tag">search_text_field</string>
    <string name="character_list_tag">characters_list</string>
    <string name="character_item_tag">character_item%1$s</string>
</resources>